# Document-Rectification-Concentric-Circle-Detection

./: .gitignore  pyproject.toml
v1/: README.md  main.py
v2/: .gitignore.txt  README.md  comandos  como modificar main  main.py  requirements.txt
v3/: README.md  main.py
v3.1/: README.md  como instalar.txt
v3.1/src/docfix/: __init__.py  main.py  pipeline.py
