[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "docfix"
version = "0.1.0"
description = "Rectify document photos and detect concentric circles (grid + circle)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Tu Nombre" }]
dependencies = [
  "opencv-python>=4.9.0.80",
  "numpy>=1.24",
  "scipy>=1.11",
  "scikit-image>=0.22.0"
]

[project.scripts]
docfix = "docfix.main:cli"
